--- a/src/app/components/metadata-cards-list/metadata-cards-list.component.html
+++ b/src/app/components/metadata-cards-list/metadata-cards-list.component.html
@@ -1,1 +1,12 @@
-<p>metadata-cards-list works!</p>
+<h2>Metadata Cards</h2>
+<ul>
+    <li *ngFor="let card of metadataCards">
+        <span>{{card.id}}</span>
+        {{card.type}}<br>
+        <ul>
+            <li *ngFor="let value of card.values">
+                {{value}}
+            </li>
+        </ul>
+    </li>
+</ul>
