--- a/src/app/components/template-cards-list/template-cards-list.component.html
+++ b/src/app/components/template-cards-list/template-cards-list.component.html
@@ -1,13 +1,32 @@
 <h2>Template Cards</h2>
-<ul>
-    <li *ngFor="let card of templateCards">
+
+<div>
+  <label>Card Name:
+      <input #cardName />
+  </label>
+  <!-- click passes input value to add(*) then clears the input -->
+  <button (click)="add(cardName.value); cardName.value=''">
+      add
+  </button>
+</div>
+
+<ul class="dataCards">
+    <li *ngFor="let card of cards">
+        <a routerLink="/templates/{{card.id}}">
+            <span class="badge">{{card.id}}</span> {{card.name}}
+        </a>
+        <button class="delete" title="delete card" (click)="delete(card)">x</button>
+    <!--
+        <br>
         <span>{{card.id}}</span>
         {{card.type}}<br>
+        {{card.category}}<br>
         {{card.name}}<br>
         <ul>
-            <li *ngFor="let property of card.allProps">
-                {{property}}
+            <li *ngFor="let prop of card.allProps | keyvalue">
+                {{prop.key}} ==> {{prop.value}}
             </li>
         </ul>
+    -->
     </li>
 </ul>
