--- a/src/app/components/data-card-search/data-card-search.component.html
+++ b/src/app/components/data-card-search/data-card-search.component.html
@@ -5,7 +5,7 @@
   
     <ul class="search-result">
       <li *ngFor="let card of cards$ | async" >
-        <a routerLink="/detail/{{card.id}}">
+        <a routerLink="/data/{{card.id}}">
           {{card.name}}
         </a>
       </li>
